syntax = "proto3";

package common;

// Generic response structure
message Response {
  bool is_error = 1;            // Was the request successful
  string message = 2;           // Optional error or success message

  oneof data {
    UnitTypeList unit_types = 3;
    AreaList areas = 4;
    Scenario scenario = 5;
    string id = 6;              // Example: if you return a string, like a UUID or token
  }
}

// These can be reused or imported from another .proto file
message UnitTypeList {
  repeated UnitType unit_types = 1;
}

message UnitType {
  int32 type = 1;
  string name = 2;
  string description = 3;
  string icon = 4;
  uint32 health = 5;
  float accuracy = 6;
  float sight_range = 7;
  float movement_speed = 8;
}

message AreaList {
  repeated Area areas = 1;
}

message Area {
  string name = 1;
  string description = 2;
  string color = 3;
  float movement_speed_modifier = 4;
  float accuracy_modifier = 5;
  float enemy_miss_chance = 6;
}

message Scenario {
  string name = 1;
  repeated Objective objectives = 2;
  repeated Unit units = 3;
  repeated ScenarioArea areas = 4;
}

message Objective {
  string letter = 1;
  ObjectiveState state = 2;
  Position position = 3;
}

message Unit {
  Position position = 1;
  string unit_key = 2;
  UnitSide side = 3;
  string icon = 4;
}

message ScenarioArea {
  string type = 1;
  repeated Ring coordinates = 2;
}

message Ring {
  repeated Position points = 1;
}

message Position {
  double lon = 1;
  double lat = 2;
}

enum ObjectiveState {
  NEUTRAL = 0;
  CAPTURING = 1;
  CAPTURED = 2;
}

enum UnitSide {
  ALLY = 0;
  ENEMY = 1;
}
